--- a/EtuStackOverflow/Views/Home/Questions.cshtml
+++ b/EtuStackOverflow/Views/Home/Questions.cshtml
@@ -153,7 +153,7 @@
             <div class="card-body">
                 <div class="media media-reply pb-2" v-for="(question) in questions" :key="question.id">
                     <div class="media-body">
-                        <a :href="'/questions/'+ question.id" v-on:click="changeLocationRoute(question.id)">
+                        <div type="button" v-on:click="changeLocationRoute('/questions/'+question.id)">
                             <div class="d-sm-flex justify-content-between mb-2">
                                 <div>
                                     <h5 class="mb-sm-0 fw-bold">{{question.title}}</h5>
@@ -165,7 +165,7 @@
                             <h7>
                                 {{question.content}}
                             </h7>
-                        </a>
+                        </div>
 
                         <div class="d-flex justify-content-end">
                             <div class="d-flex align-items-center">
