--- a/EtuStackOverflow/wwwroot/css/spinner.css
+++ b/EtuStackOverflow/wwwroot/css/spinner.css
@@ -14,8 +14,18 @@
     height: 50px;
     border-radius: 50%;
     border: 8px solid rgba(0, 0, 0, 0);
-    border-top-color: #a0a0a0;
-    border-bottom-color: #a0a0a0;
+    border-top-color: #5105e1;
+    border-bottom-color: #5a28b9;
+    animation: spin 1s linear infinite;
+}
+
+.custom-user-spinner {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    border: 8px solid rgba(0, 0, 0, 0);
+    border-top-color: #5a28b9;
+    border-bottom-color: #5a28b9;
     animation: spin 1s linear infinite;
 }
 
