--- a/EtuStackOverflow/Views/Home/QuestionDetail.cshtml
+++ b/EtuStackOverflow/Views/Home/QuestionDetail.cshtml
@@ -6,19 +6,31 @@
     <div class="col-md-6">
         <div class="card" v-if="(question.id > 0)&&!isLoading">
             <div class="d-flex justify-content-between align-items-center card-header">
-                <div class="justify-content-start">
-                    <img v-if="question.profilePhoto.length !== 0" v-bind:src="getProfilePhoto(question.profilePhoto)" class="rounded-circle" width="50" height="50">
-                    <span v-if="question.profilePhoto.length === 0"
-                          class="bg-light text-danger rounded-circle fs-5 fw-bold d-flex justify-content-center align-items-center" style="width: 50px;height: 50px;">
-                        {{question.userName.toUpperCase().charAt(0)}}
-                    </span>
-                    <a class="text-dark fw-bold" href="/users">
-                        <span>{{question.userName}}</span>
-                    </a>
+                <div class="justify-content-start align-items-center">
+                    <div class="row">
+                        <div class="col-md-4">
+                            <img v-if="question.profilePhoto.length !== 0" v-bind:src="getProfilePhoto(question.profilePhoto)" class="rounded-circle" width="50" height="50">
+                            <span v-if="question.profilePhoto.length === 0"
+                                  class="bg-light text-danger rounded-circle fs-5 fw-bold d-flex justify-content-center align-items-center" style="width: 50px;height: 50px;">
+                                {{question.userName.toUpperCase().charAt(0)}}
+                            </span>
+                        </div>
+                        <div class="col-md-8 d-flex align-items-center">
+                            <a class="text-dark fw-bold" :href="'/users/'+question.userId">
+                                <span>{{question.userName}}</span>
+                            </a>
+                        </div>
+                    </div>
                 </div>
-                <div class="justify-content-end align-items-center">
-                    <small class="text-muted ml-3">{{timeSince(question.createdDate)}}</small>
+                <div class="d-flex justify-content-end align-items-center">
+                    <div class="align-items-center justify-content-center">
+                        <small class="text-muted ml-3">{{timeSince(question.createdDate)}}</small>
+                    </div>
+                    <div class="align-items-center justify-content-center ms-2" v-if="question.isSolved">
+                        <span class="label label-success">Çözüldü</span>
+                    </div>
                 </div>
+
             </div>
             <div class="card-body">
                 <div class="d-sm-flex justify-content-between mb-2">
