yanlış yazılan kelime değiştirildi

--- a/EtuStackOverflow/Views/Email/Success.cshtml
+++ b/EtuStackOverflow/Views/Email/Success.cshtml
@@ -48,7 +48,7 @@
                         </h5>
                         <div class="mt-5">
                             <a class="btn btn-outline-info" href="/auth/login">
-                                Girise Yap
+                                Giris Yap
                             </a>
                         </div>
                     </div>
