--- a/EtuStackOverflow/Views/Shared/_Layout.cshtml
+++ b/EtuStackOverflow/Views/Shared/_Layout.cshtml
@@ -126,6 +126,7 @@
     <script src="~/js/gleek.js"></script>
     <script src="~/js/styleSwitcher.js"></script>
     <script type="module" src="~/js/script.js"></script>
+    <script type="module" src="~/js/admin/admin.js"></script>
     <script type="module" src="~/js/cookieManager.js"></script>
     <script type="module" src="~/js/data/user.js"></script>
     <script type="module" src="~/js/data/question.js"></script>
