--- a/EtuStackOverflow/Views/Home/Users.cshtml
+++ b/EtuStackOverflow/Views/Home/Users.cshtml
@@ -23,7 +23,22 @@
         </div>
     </div>
     <div class="col-lg-3 col-sm-6" v-for="(user) in userList" :key="user.id">
-        <div class="card shadow" type="button" v-on:click="changeLocationRoute('/users/'+user.id)">
+        <div class="card shadow" v-if="userProfileDetail.id===0">
+            <div class="card-body">
+                <div class="text-center">
+                    <div class="d-flex justify-content-center align-items-center">
+                        <img v-if="user.profilePhoto.length !== 0" class="rounded-circle" v-bind:src="getProfilePhoto(user.profilePhoto)" width="125" height="125" alt="">
+                        <span v-if="!(user.profilePhoto.length !== 0)"
+                              class="bg-light text-danger rounded-circle fs-1 fw-bold d-flex justify-content-center align-items-center" style="width: 125px;height: 125px;">
+                            {{user.fullName.charAt(0)}}
+                        </span>
+                    </div>
+                    <h5 class="mt-3 mb-1">{{user.fullName}}</h5>
+                    <p class="m-0">{{user.userName}}</p>
+                </div>
+            </div>
+        </div>
+        <div class="card shadow" type="button" v-on:click="changeLocationRoute('/users/'+user.id)" v-if="userProfileDetail.id!==0">
             <div class="card-body">
                 <div class="text-center">
                     <div class="d-flex justify-content-center align-items-center">
