--- a/EtuStackOverflow/Views/Home/Questions.cshtml
+++ b/EtuStackOverflow/Views/Home/Questions.cshtml
@@ -86,9 +86,10 @@
                                     <input type="text"
                                            class="form-control rounded"
                                            placeholder="Search Question"
+                                           v-model="searchTerm"
                                            aria-label="Search Dashboard">
                                     <div class="input-group-append">
-                                        <a class="btn-light rounded">
+                                        <a class="btn-light rounded" v-on:click="getAllQuestionssEvent()">
                                             <span class="input-group-text bg-transparent border-0 fs-4" id="basic-addon1"><i class="mdi mdi-magnify"></i></span>
                                         </a>
                                     </div>
@@ -214,7 +215,7 @@
         <nav>
             <ul class="pagination justify-content-center">
                 <li class="page-item" :disabled="!pagging.hasPrevios">
-                    <a class="page-link" href="#" aria-label="Previous" v-on:click.prevent="goToPage(pagging.currentPage - 1)">
+                    <a class="page-link" href="#" aria-label="Previous" v-on:click.prevent="goToPageQuestion(pagging.currentPage - 1)">
                         <span aria-hidden="true">&laquo;</span>
                         <span class="sr-only">Previous</span>
                     </a>
@@ -223,11 +224,11 @@
                     v-for="(page,index) in pages"
                     :key="index"
                     :class="{ active: page === pagging.currentPage }">
-                    <a class="page-link" href="#" v-on:click.prevent="goToPage(page)" v-if="page !== '...'">{{ page }}</a>
+                    <a class="page-link" href="#" v-on:click.prevent="goToPageQuestion(page)" v-if="page !== '...'">{{ page }}</a>
                     <span class="page-link" v-else>{{ page }}</span>
                 </li>
                 <li class="page-item" :disabled="!pagging.hasNext">
-                    <a class="page-link" href="#" aria-label="Next" v-on:click.prevent="goToPage(pagging.currentPage + 1)">
+                    <a class="page-link" href="#" aria-label="Next" v-on:click.prevent="goToPageQuestion(pagging.currentPage + 1)">
                         <span aria-hidden="true">&raquo;</span>
                         <span class="sr-only">Next</span>
                     </a>
