--- a/EtuStackOverflow/Views/Home/Users.cshtml
+++ b/EtuStackOverflow/Views/Home/Users.cshtml
@@ -71,7 +71,7 @@
         <nav>
             <ul class="pagination justify-content-center">
                 <li class="page-item" :disabled="!pagging.hasPrevios">
-                    <a class="page-link" href="#" aria-label="Previous" v-on:click.prevent="goToPage(pagging.currentPage - 1)">
+                    <a class="page-link" href="#" aria-label="Previous" v-on:click.prevent="goToPageUser(pagging.currentPage - 1)">
                         <span aria-hidden="true">&laquo;</span>
                         <span class="sr-only">Previous</span>
                     </a>
@@ -80,11 +80,11 @@
                     v-for="(page,index) in pages"
                     :key="index"
                     :class="{ active: page === pagging.currentPage }">
-                    <a class="page-link" href="#" v-on:click.prevent="goToPage(page)" v-if="page !== '...'">{{ page }}</a>
+                    <a class="page-link" href="#" v-on:click.prevent="goToPageUser(page)" v-if="page !== '...'">{{ page }}</a>
                     <span class="page-link" v-else>{{ page }}</span>
                 </li>
                 <li class="page-item" :disabled="!pagging.hasNext">
-                    <a class="page-link" href="#" aria-label="Next" v-on:click.prevent="goToPage(pagging.currentPage + 1)">
+                    <a class="page-link" href="#" aria-label="Next" v-on:click.prevent="goToPageUser(pagging.currentPage + 1)">
                         <span aria-hidden="true">&raquo;</span>
                         <span class="sr-only">Next</span>
                     </a>
