--- a/EtuStackOverflow/Views/Shared/_Layout.cshtml
+++ b/EtuStackOverflow/Views/Shared/_Layout.cshtml
@@ -32,7 +32,7 @@
                         <img class="mr-3" src="~/images/logo.jpg" width="50" height="50" alt="Logo">
 
                     </a>
-                    <span class="navbar-brand fw-bold">EtuStackOverflow</span>
+                    <span class="navbar-brand fw-bold">AskForEtu</span>
                     <div class="navbar-collapse collapse d-sm-inline-flex justify-content-center align-items-center">
                         <ul class="navbar-nav gap-5">
                             <li class="nav-item">
